syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option java_multiple_files = true;

import "config.proto";

package khiin.proto;

enum SpecialKey {
    SK_NONE = 0;
    SK_SPACE = 1;
    SK_ENTER = 2;
    SK_ESC = 3;
    SK_BACKSPACE = 4;
    SK_TAB = 5;
    SK_LEFT = 6;
    SK_UP = 7;
    SK_RIGHT = 8;
    SK_DOWN = 9;
    SK_PGUP = 10;
    SK_PGDN = 11;
    SK_HOME = 12;
    SK_END = 13;
    SK_DEL = 14;
}

enum ModifierKey {
    MODK_NONE = 0;
    MODK_CTRL = 1;
    MODK_ALT = 2;
    MODK_SHIFT = 3;
}

// Each platform app should map from its own key set to this set.
// On hardware keyboards, |modifier_keys| may be used in combination
// with either a |special_key| or a normal ascii |key_code|
message KeyEvent {
    // For ASCII & printable letters
    int32 key_code = 1;

    // Other keys e.g., arrow keys
    SpecialKey special_key = 2;

    // Ctrl, Alt, Shift: More than 1 modifier can be pressed at a time
    repeated ModifierKey modifier_keys = 3;
}

enum CommandType {
    CMD_UNSPECIFIED = 0;
    CMD_SEND_KEY = 1;
    CMD_REVERT = 2;
    CMD_RESET = 3;
    CMD_COMMIT = 4;
    CMD_SELECT_CANDIDATE = 5;
    CMD_FOCUS_CANDIDATE = 6;
    CMD_SWITCH_INPUT_MODE = 7;
    CMD_PLACE_CURSOR = 8;
    CMD_DISABLE = 9;
    CMD_ENABLE = 10;
    CMD_SET_CONFIG = 11;
    CMD_TEST_SEND_KEY = 12;
    CMD_LIST_EMOJIS = 13;
    CMD_RESET_USER_DATA = 14;
    CMD_SHUTDOWN = 15;
}

// Message sent from app to engine
message Request {
    uint32 id = 1;

    CommandType type = 2;

    KeyEvent key_event = 3;

    // ID or index position of the candidate focused or selected by the user
    int32 candidate_id = 4;

    // Used if the user taps/clicks somewhere, otherwise arrow keys are sent
    // and the engine figures out its own cursor position
    int32 cursor_position = 5;

    AppConfig config = 6;
}

enum SegmentStatus {
    SS_UNMARKED = 0;   // No underline
    SS_COMPOSING = 1;  // Dots or squiggle underline
    SS_CONVERTED = 2;  // Solid underline
    SS_FOCUSED = 3;    // Thick, solid underline
}

// The display buffer text and cursor position
message Preedit {
    message Segment {
        // For visual feedback to the user
        SegmentStatus status = 1;

        // The text to be displayed
        string value = 2;
    }

    repeated Segment segments = 1;

    // Position of the cursor in unicode code points
    int32 caret = 2;

    // Postion in unicode codepoints of the beginning of
    // the focused segment, usually where the candidate
    // window should align text
    int32 focused_caret = 3;
}

// All candidates for the current |Composition|
// App should decide how to show and navigate candidates,
// and use an InputEvent to report back the |candidate_id| as
// user navigates
message Candidate {

    // Used to style the text for providing a visual cue to the user
    enum Category {
        CCAT_BASIC = 0;  // Regular text color
        CCAT_EXTENDED = 1;    // Highlighted text color
        CCAT_FALLBACK = 2;    // De-emphasized text color
    }

    int32 id = 1;
    
    // The text of the candidate
    string value = 2;

    // The Lomaji input string associated with this candidate
    string key = 3;

    // A hint that can appear near the candidate
    string annotation = 4;

    Category category = 5;
}

message CandidateList {
    repeated Candidate candidates = 1;

    // The focused candidate should be highlighted for the user
    int32 focused = 2;

    // Page number. One page has 9 candiates
    int32 page = 3;
}

enum ErrorCode {
    OK = 0;
    FAIL = 1;
}

enum EditState {
    ES_EMPTY = 0;
    ES_COMPOSING = 1;
    ES_CONVERTED = 2;
    ES_SELECTING = 3;
    ES_ILLEGAL = 4;
}

// The response portion of the message, from engine back to app
message Response {
    ErrorCode error = 1;
    Preedit preedit = 2;
    CandidateList candidate_list = 3;
    EditState edit_state = 4;
    bool committed = 5;
    string committed_text = 6;

    // Used with Windows TSF OnTestKeyDown method
    bool consumable = 7;
}

// A full command bundle, passed between app and engine
// during each edit session
message Command {
    Request request = 2;
    Response response = 3;
}
